--- a/pos_v0.1/SpecRunner.html
+++ b/pos_v0.1/SpecRunner.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../lib/jasmine-2.0.1/boot.js"></script>
 
     <!-- include source files here... -->
+    <script type="text/javascript" src="src/item.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
