--- a/pos_v0.1/SpecRunner.html
+++ b/pos_v0.1/SpecRunner.html
@@ -13,6 +13,7 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="src/main.js"></script>
+    <script type="text/javascript" src="node_modules/functional.js/functional.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/main-spec.js"></script>
